--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "OSU",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.13.3",
+    "body-parser": "^1.19.0",
     "express": "^4.13.2",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
+    "forever": "^3.0.0",
     "jquery": "^3.5.1",
-    "mysql": "^2.8.0"
+    "mysql": "^2.8.0",
+    "prettier": "^2.0.5"
   }
 }
